fixed search bar margin on smaller devices, wrote a js script that display the correct amount of cards according to resolution

--- a/src/MMH/SiteBundle/Resources/public/css/style.css
+++ b/src/MMH/SiteBundle/Resources/public/css/style.css
@@ -695,7 +695,7 @@ form {
   height: 28px;
   line-height: 25px;
   font-size: 18px;
-  margin: 15px auto;
+  margin: 15px 15px;
 }
 
 hr {
